--- a/package.json
+++ b/package.json
@@ -12,19 +12,22 @@
   "dependences": {},
   "devDependencies": {
     "gulp": "3.9.x",
-    "gulp-concat": "~2.1.x",
-    "gulp-connect": "~2.0.5",
-    "gulp-jshint": "~1.5.1",
-    "gulp-replace": "^0.4.0",
-    "gulp-size": "~0.4.0",
-    "gulp-uglify": "~1.5.x",
-    "gulp-util": "~2.2.x",
-    "gulp-html-validator": "^0.0.2",
-    "inquirer": "^0.5.1",
-    "semver": "^3.0.1",
-    "gulp-livereload": "^3.8.0"
+    "gulp-concat": "^2.6.1",
+    "gulp-connect": "^5.6.1",
+    "gulp-html-validator": "0.0.5",
+    "gulp-jshint": "^2.1.0",
+    "gulp-livereload": "^4.0.0",
+    "gulp-replace": "^1.0.0",
+    "gulp-size": "^3.0.0",
+    "gulp-uglify": "^3.0.1",
+    "gulp-util": "^3.0.8",
+    "inquirer": "^6.2.0",
+    "semver": "^5.6.0"
   },
   "spm": {
     "main": "Chart.js"
+  },
+  "dependencies": {
+    "jshint": "^2.9.6"
   }
 }
