--- a/bower.json
+++ b/bower.json
@@ -1,21 +1,21 @@
 {
-  "name": "Chart.js",
-  "description": "Simple HTML5 Charts using the canvas element",
-  "homepage": "https://github.com/nnnick/Chart.js",
-  "author": "nnnick",
-  "main": [
-    "Chart.js"
-  ],
-  "ignore": [
-    "**/*",
-    ".travis.yml",
-    "CONTRIBUTING.md",
-    "Chart.js",
-    "LICENSE.md",
-    "README.md",
-    "gulpfile.js",
-    "package.json"
-  ],
-  "dependencies": {},
-  "version": "1.1.1"
+    "name": "Chart.js",
+    "description": "Simple HTML5 Charts using the canvas element",
+    "homepage": "https://github.com/avlcodemonkey/Chart.js",
+    "author": "avlcodemonkey",
+    "main": [
+        "Chart.js"
+    ],
+    "ignore": [
+        "**/*",
+        ".travis.yml",
+        "CONTRIBUTING.md",
+        "Chart.js",
+        "LICENSE.md",
+        "README.md",
+        "gulpfile.js",
+        "package.json"
+    ],
+    "dependencies": {},
+    "version": "1.2.1"
 }
