Simplifying gulp events and updating packages.

--- a/package.json
+++ b/package.json
@@ -1,34 +1,31 @@
 {
-  "name": "chart.js",
-  "homepage": "http://www.chartjs.org",
-  "description": "Simple HTML5 charts using the canvas element.",
-  "version": "1.1.1",
-  "main": "Chart.js",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/nnnick/Chart.js.git"
-  },
-  "license": "MIT",
-  "dependences": {},
-  "devDependencies": {
-    "gulp": "3.9.x",
-    "gulp-concat": "^2.6.1",
-    "gulp-connect": "^5.6.1",
-    "gulp-html-validator": "0.0.5",
-    "gulp-jshint": "^2.1.0",
-    "gulp-livereload": "^4.0.0",
-    "gulp-replace": "^1.0.0",
-    "gulp-size": "^3.0.0",
-    "gulp-uglify": "^3.0.1",
-    "gulp-util": "^3.0.8",
-    "inquirer": "^6.2.0",
-    "semver": "^5.6.0"
-  },
-  "spm": {
-    "main": "Chart.js"
-  },
-  "dependencies": {
-    "gulp-plumber": "^1.2.1",
-    "jshint": "^2.9.6"
-  }
+    "name": "chart.js",
+    "homepage": "http://www.chartjs.org",
+    "description": "Simple HTML5 charts using the canvas element.",
+    "version": "1.2.1",
+    "main": "Chart.js",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/avlcodemonkey/Chart.js.git"
+    },
+    "license": "MIT",
+    "dependences": {},
+    "devDependencies": {
+        "gulp": "3.9.x",
+        "gulp-concat": "^2.6.1",
+        "gulp-jshint": "^2.1.0",
+        "gulp-replace": "^1.0.0",
+        "gulp-size": "^3.0.0",
+        "gulp-uglify": "^3.0.1",
+        "gulp-util": "^3.0.8",
+        "inquirer": "^6.2.0",
+        "semver": "^5.6.0"
+    },
+    "spm": {
+        "main": "Chart.js"
+    },
+    "dependencies": {
+        "gulp-plumber": "^1.2.1",
+        "jshint": "^2.9.6"
+    }
 }
